--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "start": "webpack-dev-server --open"
+    "watch": "webpack --watch",
+    "serve": "npm run watch & nodemon dist/bundle.js"
   },
   "repository": {
     "type": "git",
@@ -20,14 +21,13 @@
   },
   "homepage": "https://github.com/tlan16/SIT737-assignment-1#readme",
   "devDependencies": {
-    "clean-webpack-plugin": "^0.1.19",
-    "html-webpack-plugin": "^3.1.0",
-    "parallel-webpack": "^2.3.0",
     "webpack": "^4.3.0",
     "webpack-cli": "^2.0.13",
-    "webpack-dev-server": "^3.1.1"
+    "webpack-dev-middleware": "^3.1.0",
+    "webpack-hot-middleware": "^2.21.2"
   },
   "dependencies": {
-    "lodash": "^4.17.5"
+    "dotenv": "^5.0.1",
+    "express": "^4.16.3"
   }
 }
