--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   },
   "dependencies": {
     "dotenv": "^5.0.1",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "multer": "^1.3.0",
+    "node-cloud-vision-api": "^0.2.0"
   }
 }
