--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
+    "google-translate": "^2.1.0",
     "multer": "^1.3.0",
     "node-cloud-vision-api": "^0.2.0"
   }
