--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 mode=production
 PORT=3000
-GOOGLE_API_KEY=YOUR_KEY
+VISON_SCORE_THRESHOLD=0.96
+GOOGLE_API_KEY=
+WATSON_TTS_USERNAME=
+WATSON_TTS_PASSWORD=
