--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "google-translate": "^2.1.0",
-    "google-tts-api": "^0.0.2",
     "multer": "^1.3.0",
-    "node-cloud-vision-api": "^0.2.0"
+    "node-cloud-vision-api": "^0.2.0",
+    "watson-developer-cloud": "^3.2.1"
   }
 }
