--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
-    "watch": "webpack --watch",
-    "serve": "npm run watch & nodemon dist/bundle.js"
+    "serve": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +20,7 @@
   },
   "homepage": "https://github.com/tlan16/SIT737-assignment-1#readme",
   "devDependencies": {
+    "nodemon": "^1.17.4",
     "webpack": "^4.3.0",
     "webpack-cli": "^2.0.13",
     "webpack-dev-middleware": "^3.1.0",
