--- a/package.json
+++ b/package.json
@@ -20,11 +20,10 @@
   },
   "homepage": "https://github.com/tlan16/SIT737-assignment-1#readme",
   "devDependencies": {
-    "nodemon": "^1.17.4",
-    "webpack": "^4.3.0",
-    "webpack-cli": "^2.0.13",
-    "webpack-dev-middleware": "^3.1.0",
-    "webpack-hot-middleware": "^2.21.2"
+    "eslint": "^4.19.1",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-react": "^7.8.2",
+    "nodemon": "^1.17.4"
   },
   "dependencies": {
     "dotenv": "^5.0.1",
