--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "nodemon": "^1.17.4"
   },
   "dependencies": {
+    "crc": "^3.5.0",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "google-translate": "^2.1.0",
     "multer": "^1.3.0",
     "node-cloud-vision-api": "^0.2.0",
+    "redis": "^2.8.0",
     "watson-developer-cloud": "^3.2.1"
   }
 }
